update data structure  a few demos